tests/baselines/reference/esDecorators-classExpression-missingEmitHelpers-classDecorator.17.errors.txt
main.ts(8,5): error TS2538: Type 'any' cannot be used as an index type.
main.ts(8,13): error TS2343: This syntax requires an imported helper named '__esDecorate' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
main.ts(8,13): error TS2343: This syntax requires an imported helper named '__runInitializers' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
main.ts(8,13): error TS2343: This syntax requires an imported helper named '__setFunctionName' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.


==== main.ts (4 errors) ====
    export {};
    declare var dec: any;
    declare var x: any;
    
    var C;
    
    // uses __esDecorate, __runInitializers, __setFunctionName, __propKey
    ({ [x]: C = @dec class {} } = {});
        ~
!!! error TS2538: Type 'any' cannot be used as an index type.
                ~~~~
!!! error TS2343: This syntax requires an imported helper named '__esDecorate' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
                ~~~~
!!! error TS2343: This syntax requires an imported helper named '__runInitializers' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
                ~~~~
!!! error TS2343: This syntax requires an imported helper named '__setFunctionName' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
    
==== tslib.d.ts (0 errors) ====
    export {}
    